--- a/publications.html
+++ b/publications.html
@@ -44,12 +44,21 @@ title: Publications
   <p></p>
   <ul>
     <li>
+          <p>
+            Loquat: A Framework for Large-Scale Actor Communication on Edge Networks
+            <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+            <span class="date">SmartEdge 2017 : The First International Workshop on Smart Edge Computing and Networking</span>
+            <span><a href="https://www.info.ucl.ac.be/~pvr/loquat-smartedge17.pdf">[preprint]</a>
+          </p>
+          </li>
+
+    <li>
       <p>
         Worlds of Events: Deduction with Partial Knowledge about Causality.
         <span class="author">Seyed Hossein Haeri, Peter Van Roy, Carlos Baquero and Christopher S. Meiklejohn.</span>
         <span class="date">9th Interaction and Concurrency Experience Satellite Workshop of DisCoTec 2016</span>
       </p>
-      </li>
+    </li>
 
     <li>
       <p>
