--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,14 @@ title: Publications
         <span><a href="http://christophermeiklejohn.com/publications/ppdp-2017-preprint.pdf">[preprint]</a></span>
       </p>
     </li>
+    <li>
+      <p>
+        Lasp: A Language for Distributed, Coordination-Free Programming
+        <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+        <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span><a href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
+      </p>
+    </li>
   </ul>
 
   <h2>Workshops</h2>
