--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Christopher Meiklejohn
   </ul>
 
   <h1>Stateful Serverless</h1>
-  <p>Building statefull serverless solutions.</p>
+  <p>Building stateful serverless solutions.</p>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.group == "Serverless" %}
