--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Partisan: Scaling the Distributed Actor Runtime
+        <span class="author">Christopher S. Meiklejohn, Heather Miller, Peter Alvaro</span>
+        <span class="date">The 19th USENIX Annual Technical Conference (ATC '19)</span>
+        <span><a href="https://www.usenix.org/conference/atc19/presentation/meiklejohn">[USENIX]</a></span>
+      </p>
+    </li>
+    <li>
+      <p>
         Practical Evaluation of the Lasp Programming Model at Large Scale
         <span class="author">Christopher S. Meiklejohn, Vitor Enes, Junghun Yoo, Carlos Baquero, Peter Van Roy, Annette Bieniusa</span>
         <span class="date">The 19th International Symposium on Principles and Practice of Declarative Programming</span>
