--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@ title: Publications
       <p>
         Practical Evaluation of the Lasp Programming Model at Large Scale
         <span class="author">Christopher S. Meiklejohn, Vitor Enes, Junghun Yoo, Carlos Baquero, Peter Van Roy, Annette Bieniusa</span>
-        <span class="date">The 19th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span class="date">The 19th International Symposium on Principles and Practice of Declarative Programming (PPDP '17)</span>
         <span><a href="http://christophermeiklejohn.com/publications/ppdp-2017-preprint.pdf">[preprint]</a></span>
       </p>
     </li>
@@ -44,7 +44,7 @@ title: Publications
       <p>
         Lasp: A Language for Distributed, Coordination-Free Programming
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming (PPDP '15)</span>
         <span><a href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
       </p>
     </li>
