--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ title: Publications
           <p>
             Loquat: A Framework for Large-Scale Actor Communication on Edge Networks
             <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-            <span class="date">SmartEdge 2017 : The First International Workshop on Smart Edge Computing and Networking</span>
+            <span class="date">The First International Workshop on Smart Edge Computing and Networking (SmartEdge '17)</span>
             <span><a href="https://www.info.ucl.ac.be/~pvr/loquat-smartedge17.pdf">[preprint]</a>
           </p>
           </li>
