--- a/publications.html
+++ b/publications.html
@@ -54,13 +54,22 @@ title: Publications
   <p></p>
   <ul>
     <li>
-          <p>
-            Loquat: A Framework for Large-Scale Actor Communication on Edge Networks
-            <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-            <span class="date">The First International Workshop on Smart Edge Computing and Networking (SmartEdge '17)</span>
-            <span><a href="https://www.info.ucl.ac.be/~pvr/loquat-smartedge17.pdf">[preprint]</a>
-          </p>
-          </li>
+        <p>
+          Towards a Solution to the Red Wedding Problem
+          <span class="author">Christopher S. Meiklejohn, Heather Miller, Zeeshan Lakhani</span>
+          <span class="date">The First Workshop on Hot Topics in Edge Computing (HotEdge '18), co-located with ATC '18</span>
+          <span><a href="http://christophermeiklejohn.com/publications/hotedge-2018-preprint.pdf">[preprint]</a>
+        </p>
+    </li>
+
+    <li>
+        <p>
+          Loquat: A Framework for Large-Scale Actor Communication on Edge Networks
+          <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+          <span class="date">The First International Workshop on Smart Edge Computing and Networking (SmartEdge '17)</span>
+          <span><a href="https://www.info.ucl.ac.be/~pvr/loquat-smartedge17.pdf">[preprint]</a>
+        </p>
+    </li>
 
     <li>
       <p>
