Add usenix link.

--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,7 @@ title: Publications
           <span class="author">Christopher S. Meiklejohn, Heather Miller, Zeeshan Lakhani</span>
           <span class="date">The First Workshop on Hot Topics in Edge Computing (HotEdge '18), co-located with ATC '18</span>
           <span><a href="http://christophermeiklejohn.com/publications/hotedge-2018-preprint.pdf">[preprint]</a>
+                <a href="https://www.usenix.org/conference/hotedge18/presentation/meiklejohn">[USENIX]</a></span>
         </p>
     </li>
 
