--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,15 @@ title: Publications
 
     <li>
         <p>
+          Partisan: Enabling Real-World Protocol Evaluation
+          <span class="author">Christopher S. Meiklejohn</span>
+          <span class="date">The 2018 Workshop on Advanced Tools, Programming Languages, and PLatforms for Implementing and Evaluating Algorithms for Distributed systems, co-located with PODC '18</span>
+          <span><a href="https://dl.acm.org/citation.cfm?id=3231106">[ACM]</a></span>
+        </p>
+    </li>
+
+    <li>
+        <p>
           Loquat: A Framework for Large-Scale Actor Communication on Edge Networks
           <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
           <span class="date">The First International Workshop on Smart Edge Computing and Networking (SmartEdge '17)</span>
