--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@ title: Publications
         <p>
           Towards a Solution to the Red Wedding Problem
           <span class="author">Christopher S. Meiklejohn, Heather Miller, Zeeshan Lakhani</span>
-          <span class="date">The First Workshop on Hot Topics in Edge Computing (HotEdge '18), co-located with ATC '18</span>
+          <span class="date">The First Workshop on Hot Topics in Edge Computing (HotEdge '18), collocated with ATC '18</span>
           <span><a href="http://christophermeiklejohn.com/publications/hotedge-2018-preprint.pdf">[preprint]</a>
                 <a href="https://www.usenix.org/conference/hotedge18/presentation/meiklejohn">[USENIX]</a></span>
         </p>
@@ -67,7 +67,7 @@ title: Publications
         <p>
           Partisan: Enabling Real-World Protocol Evaluation
           <span class="author">Christopher S. Meiklejohn</span>
-          <span class="date">The 2018 Workshop on Advanced Tools, Programming Languages, and PLatforms for Implementing and Evaluating Algorithms for Distributed systems, co-located with PODC '18</span>
+          <span class="date">The 2018 Workshop on Advanced Tools, Programming Languages, and PLatforms for Implementing and Evaluating Algorithms for Distributed systems, collocated with PODC '18</span>
           <span><a href="https://dl.acm.org/citation.cfm?id=3231106">[ACM]</a></span>
         </p>
     </li>
@@ -93,7 +93,7 @@ title: Publications
       <p>
         Towards Property-Based Consistency Verification
         <span class="author">Paolo Viotti, Christopher S. Meiklejohn, Marko Vukolic</span>
-        <span class="date">PaPoC '16, co-located event at ACM EuroSys '16</span>
+        <span class="date">PaPoC '16, collocated event at ACM EuroSys '16</span>
         <span><a href="http://www.eurecom.fr/en/publication/4874/detail/towards-property-based-consistency-verification">[EURECOM]</a>
       </p>
     </li>
@@ -102,7 +102,7 @@ title: Publications
       <p>
         Declarative, Sliding Window Aggregations for Computations at the Edge
         <span class="author">Christopher S. Meiklejohn, Seyed H. Haeri, Peter Van Roy</span>
-        <span class="date">1st International Workshop on Edge Computing, EdgeCom 2016, co-located event at CCNC 2016</span>
+        <span class="date">1st International Workshop on Edge Computing, EdgeCom 2016, collocated event at CCNC 2016</span>
         <span><a
               href="http://christophermeiklejohn.com/publications/edgecom-2016-preprint.pdf">[preprint]</a>
       </p>
@@ -112,7 +112,7 @@ title: Publications
       <p>
         Selective Hearing: An Approach to Distributed, Eventually Consistent Edge Computation
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS '15</span>
+        <span class="date">Workshop on Planetary-Scale Distributed Systems, collocated event at SRDS '15</span>
         <span><a
               href="http://christophermeiklejohn.com/publications/wpsds-2015-preprint.pdf">[preprint]</a>
       </p>
@@ -122,7 +122,7 @@ title: Publications
       <p>
         The Implementation and Use of a Generic Dataflow Behaviour in Erlang
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
+        <span class="date">ACM SIGPLAN Erlang Workshop '15, collocated event at ICFP '15</span>
         <span><a href="http://christophermeiklejohn.com/publications/erlang-workshop-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2804300">[ACM]</a>
       </p>
     </li>
@@ -131,7 +131,7 @@ title: Publications
       <p>
         Lasp: A Language for Distributed, Eventually Consistent Computations with CRDTs
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">PaPoC '15, co-located event at ACM EuroSys '15</span>
+        <span class="date">PaPoC '15, collocated event at ACM EuroSys '15</span>
         <span><a href="http://dl.acm.org/citation.cfm?id=2745954">[ACM]</a></span>
       </p>
     </li>
@@ -150,7 +150,7 @@ title: Publications
       <p>
         Derflow: distributed deterministic dataflow programming for erlang
         <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
-        <span class="date">ACM SIGPLAN Erlang Workshop '14, co-located event at ICFP '14</span>
+        <span class="date">ACM SIGPLAN Erlang Workshop '14, collocated event at ICFP '14</span>
         <span><a href="http://dl.acm.org/citation.cfm?id=2633451">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/derflow-distributed-deterministic-dataflow-programming-for-erlang">[slides]</a></span>
       </p>
     </li>
@@ -159,7 +159,7 @@ title: Publications
       <p>
         On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures
           <span class="author">Christopher S. Meiklejohn</span>
-          <span class="date">PaPEC '14, co-located event at ACM EuroSys '14</span>
+          <span class="date">PaPEC '14, collocated event at ACM EuroSys '14</span>
           <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/on-the-composability-of-the-riak-dt-map-expanding-from-embedded-to-multi-key-structures">[slides]</a></span>
       </p>
       </li>
@@ -168,7 +168,7 @@ title: Publications
       <p>
         Riak DT Map: A Composable, Convergent Replicated Dictionary
         <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
-        <span class="date">PaPEC '14, co-located event at ACM EuroSys '14</span>
+        <span class="date">PaPEC '14, collocated event at ACM EuroSys '14</span>
         <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">[ACM]</a></span>
       </p>
     </li>
@@ -177,7 +177,7 @@ title: Publications
       <p>
         Riak PG: distributed process groups on dynamo-style distributed storage
         <span class="author">Christopher S. Meiklejohn</span>
-        <span class="date">ACM SIGPLAN Erlang Workshop '13, co-located event at ICFP '13</span>
+        <span class="date">ACM SIGPLAN Erlang Workshop '13, collocated event at ICFP '13</span>
         <span><a href="http://dl.acm.org/citation.cfm?id=2505305.2505309">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/riak-pg-distributed-process-groups-on-dynamo-style-distributed-storage">[slides]</a></span>
       </p>
     </li>
