--- a/publications.html
+++ b/publications.html
@@ -201,6 +201,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Towards A Systems Approach To Distributed Programming
+        <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+        <span class="date">Draft, published 8 Feb 2018</span>
+        <span> <a href="https://arxiv.org/abs/1802.02681">[arXiv preprint]</a> </span>
+      </p>
+    </li>
+    <li>
+      <p>
         Dynamic Path Contraction for Distributed, Dynamic Dataflow Languages
         <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 5 Sep 2016</span>
