--- a/publications.html
+++ b/publications.html
@@ -209,6 +209,14 @@ title: Publications
     </li>
     <li>
       <p>
+        Partisan: Enabling cloud-scale erlang applications
+        <span class="author">Christopher S. Meiklejohn, Heather Miller</span>
+        <span class="date">Draft, published 7 Feb 2018</span>
+        <span> <a href="https://arxiv.org/abs/1802.02652">[arXiv preprint]</a> </span>
+      </p>
+    </li>
+    <li>
+      <p>
         Dynamic Path Contraction for Distributed, Dynamic Dataflow Languages
         <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 5 Sep 2016</span>
