--- a/publications.html
+++ b/publications.html
@@ -217,6 +217,14 @@ title: Publications
     </li>
     <li>
       <p>
+        Just-Right Consistency: reconciling availability and safety
+        <span class="author">Marc Shapiro, Annette Bieniusa, Nuno Pregucia, Valter Balegas, Christopher Meiklejohn</span>
+        <span class="date">Draft, published 19 Jan 2018</span>
+        <span> <a href="https://arxiv.org/abs/1801.06340">[arXiv preprint]</a> </span>
+      </p>
+    </li>
+    <li>
+      <p>
         Dynamic Path Contraction for Distributed, Dynamic Dataflow Languages
         <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 5 Sep 2016</span>
