--- a/publications.html
+++ b/publications.html
@@ -241,6 +241,14 @@ title: Publications
     </li>
     <li>
       <p>
+        On the Design of Distributed Programming Models
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">Draft, published 1 Feb 2017</span>
+        <span> <a href="https://arxiv.org/abs/1701.07615">[arXiv preprint]</a> </span>
+      </p>
+    </li>
+    <li>
+      <p>
         Dynamic Path Contraction for Distributed, Dynamic Dataflow Languages
         <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 5 Sep 2016</span>
