--- a/publications.html
+++ b/publications.html
@@ -99,6 +99,14 @@ title: Publications
 
     <li>
       <p>
+        Dynamic Path Contraction for Distributed Dataflow Languages
+        <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
+        <span class="date">AGERE 2016, colocated with SPLASH 2016</span>
+      </p>
+    </li>
+
+    <li>
+      <p>
         Worlds of Events: Deduction with Partial Knowledge about Causality.
         <span class="author">Seyed Hossein Haeri, Peter Van Roy, Carlos Baquero and Christopher S. Meiklejohn.</span>
         <span class="date">9th Interaction and Concurrency Experience Satellite Workshop of DisCoTec 2016</span>
