--- a/courses.html
+++ b/courses.html
@@ -10,6 +10,7 @@ title: Courses
   <p></p>
 
   <ul>
+    <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2019)]</a></li>
     <li><a href="http://www.uclouvain.be/cours-2014-LINGI2145">Cloud Computing [LINGI2145 (Fall 2016)]</a>
     <p>Thèmes abordés:</p>
     <ul>
