--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,17 @@ title: Courses
   <p></p>
 
   <ul>
-    <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2019)]</a></li>
+    <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2019)]</a>
+    <p></p>
+    </li>
+    <li><a href="http://www.uclouvain.be/en-cours-2013-LSINF2345.html">Languages and algorithms for distributed applications [LSINF2345 (Spring 2017)]</a>
+    <p>Main themes:</p>
+    <ul>
+      <li>define distributed systems and distributed algorithms with concepts they contain and the properties they give to programs.</li>
+      <li>design collaborative applications on distributed systems using rigorous models to deal with concurrency and partial failure.</li>
+      <li>implement collaborative applications on distributed systems using appropiate technics.  <li>use some advanced tools for the development of distributed and mobile applications.</li>
+    </ul>
+    </li>
     <li><a href="http://www.uclouvain.be/cours-2014-LINGI2145">Cloud Computing [LINGI2145 (Fall 2016)]</a>
     <p>Thèmes abordés:</p>
     <ul>
@@ -20,14 +30,6 @@ title: Courses
       <li>Calculs à grande échelle dans des environnements de "cloud computing"</li>
       <li>Modèles de programmation pour les services sur le "cloud"</li>
       <li>Fournir des services Web évolutifs dans le "cloud"</li>
-    </ul>
-    </li>
-    <li><a href="http://www.uclouvain.be/en-cours-2013-LSINF2345.html">Languages and algorithms for distributed applications [LSINF2345 (Spring 2017)]</a>
-    <p>Main themes:</p>
-    <ul>
-      <li>define distributed systems and distributed algorithms with concepts they contain and the properties they give to programs.</li>
-      <li>design collaborative applications on distributed systems using rigorous models to deal with concurrency and partial failure.</li>
-      <li>implement collaborative applications on distributed systems using appropiate technics.  <li>use some advanced tools for the development of distributed and mobile applications.</li>
     </ul>
     </li>
   </ul>
