--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,13 @@ title: Publications
   <ul>
     <li>
       <p>
+        Durable Functions: Semantics for Stateful Serverless
+        <span class="author">Sebastian Burckhardt, Chris Gillum, David Justo, Konstantinos Kallas, Connor McMahon, and <b>Christopher S. Meiklejohn</b></span>
+        <span class="date">Proceedings of the ACM on Programming Languages, Issue OOPSLA (OOPSLA '21)</span>
+      </p>
+    </li>
+    <li>
+      <p>
         A.M.B.R.O.S.I.A: Providing Performant Virtual Resiliency for Distributed Applications
         <span class="author">Jonathan Goldstein, Ahmed Abdelhamid, Mike Barnett, Sebastian Burckhardt, Badrish Chandramouli, Darren Gehring, Niel Lebeck, <b>Christopher Meiklejohn</b>, Umar Farooq Minhas, Ryan Newton, Rahee Ghosh Peshawaria, Tal Zaccai, Irene Zhang</span>
         <span class="date">Proceedings of the VLDB Endowment, Vol. 13, No. 5 (VLDB '20)</span>
