--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,13 @@ title: Publications
   <ul>
     <li>
       <p>
+        Service-level Fault Injection Testing
+        <span class="author"><b>Christopher S. Meiklejohn</b>, Andrea Estrada, Yiwen Song, Heather Miller, Rohan Padhye</span>
+        <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '21)</span>
+      </p>
+    </li>
+    <li>
+      <p>
         Durable Functions: Semantics for Stateful Serverless
         <span class="author">Sebastian Burckhardt, Chris Gillum, David Justo, Konstantinos Kallas, Connor McMahon, and <b>Christopher S. Meiklejohn</b></span>
         <span class="date">Proceedings of the ACM on Programming Languages, Issue OOPSLA (OOPSLA '21)</span>
