--- a/publications.html
+++ b/publications.html
@@ -47,6 +47,14 @@ title: Publications
     </li>
     <li>
       <p>
+        Composing and Decomposing Op-Based CRDTs with Semidirect Products
+        <span class="author">Matthew Weidner, <b>Christopher S. Meiklejohn</b>, Heather Miller</span>
+        <span class="date">Proceedings of the ACM on Programming Languages, Volume 4, Issue ICFP (ICFP '20)</span>
+        <span><a href="https://dl.acm.org/doi/10.1145/3408976">[ACM]</a></span>
+      </p>
+    </li>
+    <li>
+      <p>
         Partisan: Scaling the Distributed Actor Runtime
         <span class="author"><b>Christopher S. Meiklejohn</b>, Heather Miller, Peter Alvaro</span>
         <span class="date">The 19th USENIX Annual Technical Conference (ATC '19)</span>
@@ -74,6 +82,15 @@ title: Publications
   <h2>Workshops</h2>
   <p></p>
   <ul>
+    <li>
+        <p>
+          Composing and decomposing op-based CRDTs with semidirect products: (summary)
+          <span class="author">Matthew Weidner, Christopher Meiklejohn, Heather Miller</span>
+          <span class="date">Proceedings of the 7th Workshop on Principles and Practice of Consistency for Distributed Data (PaPoC '20)</span>
+          <span><a href="https://dl.acm.org/doi/10.1145/3380787.3393687">[ACM]</a></span>
+        </p>
+    </li>
+
     <li>
         <p>
           Towards a Solution to the Red Wedding Problem
