--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,7 @@ title: Publications
         Service-level Fault Injection Testing
         <span class="author"><b>Christopher S. Meiklejohn</b>, Andrea Estrada, Yiwen Song, Heather Miller, Rohan Padhye</span>
         <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '21)</span>
+        <span><a href="http://christophermeiklejohn.com/publications/filibuster-socc-2021.pdf">[preprint]</a></span>
       </p>
     </li>
     <li>
