--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Netherite: Efficient Execution of Serverless Workflows
+        <span class="author">Sebastian Burckhardt, Badrish Chandramouli, Chris Gillum, David Justo, Konstantinos Kallas, Connor McMahon, <b>Christopher S. Meiklejohn</b>, Xiangfeng Zhu</span>
+        <span class="date">Proceedings of the VLDB Endowment, Vol. 15, No. 8 (VLDB '22)</span>
+        <span><a href="https://www.vldb.org/pvldb/vol15/p1591-burckhardt.pdf">[VLDB]</a></span>
+      </p>
+    </li>
+    <li>
+      <p>
         Service-level Fault Injection Testing
         <span class="author"><b>Christopher S. Meiklejohn</b>, Andrea Estrada, Yiwen Song, Heather Miller, Rohan Padhye</span>
         <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '21)</span>
@@ -36,6 +44,7 @@ title: Publications
         Durable Functions: Semantics for Stateful Serverless
         <span class="author">Sebastian Burckhardt, Chris Gillum, David Justo, Konstantinos Kallas, Connor McMahon, and <b>Christopher S. Meiklejohn</b></span>
         <span class="date">Proceedings of the ACM on Programming Languages, Issue OOPSLA (OOPSLA '21)</span>
+        <span><a href="https://dl.acm.org/doi/10.1145/3485510">[ACM]</a></span>
       </p>
     </li>
     <li>
