Fix broken links.

--- a/research.html
+++ b/research.html
@@ -25,7 +25,13 @@ title: Research
   <p></p>
 
   <ul>
-    <li><a href="http://lasp-lang.org">Lasp</a>
+    <li><a href="http://github.com/filibuster-testing/filibuster">Filibuster</a>
+      <p>Filibuster is the prototype implementation of Service-level Fault Injection Testing, a technique for identifying resilience issues in microservice applications.</p>
+    </li>
+    <li><a href="http://github.com/lasp-lang/partisan">Partisan</a>
+      <p>Partisan is a high-performance alternative distributed runtime for Erlang.</p>
+    </li>
+    <li>Lasp
       <p>Lasp is a new programming model designed to simplify large scale, fault-tolerant, distributed programming. Lasp is being developed as part of the SyncFree European research project. It leverages ideas from distributed dataflow extended with convergent replicated data types, or CRDTs. This supports computations where not all participants are online together at a given moment. The initial design supports synchronization-free programming by combining CRDTs together with primitives for composing them inspired by functional programming. This lets us write long-lived fault-tolerant distributed applications, including ones with nonmonotonic behavior, in a functional paradigm. The initial prototype is implemented as an Erlang library built on top of the Riak Core distributed systems infrastructure.</p>
     </li>
     <li><a href="https://syncfree.lip6.fr">SyncFree (EU/FP7)</a>
