--- a/publications.html
+++ b/publications.html
@@ -20,9 +20,28 @@ title: Publications
   </ul>
   -->
 
+  <h2>Work-in-Progress</h2>
+  <p></p>
+  <ul>
+    <li>
+      <p>
+        Distributed Execution Indexing
+        <span class="author"><b>Christopher S. Meiklejohn</b>, Rohan Padhye, Heather Miller</span>
+        <span><a href="https://arxiv.org/abs/2209.08740">[arXiV]</a></span>
+      </p>
+    </li>
+  </ul>
+
   <h2>Conferences</h2>
   <p></p>
   <ul>
+    <li>
+      <p>
+        Method Overloading the Circuit
+        <span class="author"><b>Christopher S. Meiklejohn</b>, Lydia Stark, Cezare Celozzi, Matt Ranney, Heather Miller</span>
+        <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '22)</span>
+      </p>
+    </li>
     <li>
       <p>
         Netherite: Efficient Execution of Serverless Workflows
