--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@ title: Publications
       <p>
         Distributed Execution Indexing
         <span class="author"><b>Christopher S. Meiklejohn</b>, Rohan Padhye, Heather Miller</span>
-        <span><a href="https://arxiv.org/abs/2209.08740">[arXiV]</a></span>
+        <span><a href="https://arxiv.org/abs/2209.08740">[arXiv]</a></span>
       </p>
     </li>
   </ul>
