--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,9 @@ title: Publications
         Service-level Fault Injection Testing
         <span class="author"><b>Christopher S. Meiklejohn</b>, Andrea Estrada, Yiwen Song, Heather Miller, Rohan Padhye</span>
         <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '21)</span>
-        <span><a href="http://christophermeiklejohn.com/publications/filibuster-socc-2021.pdf">[preprint]</a></span>
+        <span><a href="http://christophermeiklejohn.com/publications/filibuster-socc-2021.pdf">[preprint]</a>
+              <a href="https://dl.acm.org/doi/abs/10.1145/3472883.3487005">[ACM]</a>
+        </span>
       </p>
     </li>
     <li>
