--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,7 @@ title: Publications
         Method Overloading the Circuit
         <span class="author"><b>Christopher S. Meiklejohn</b>, Lydia Stark, Cezare Celozzi, Matt Ranney, Heather Miller</span>
         <span class="date">Proceedings of the ACM Symposium on Cloud Computing (SoCC '22)</span>
+        <span><a href="publications/socc2022-preprint.pdf">[preprint]</a></span>
       </p>
     </li>
     <li>
