--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@ title: Christopher Meiklejohn
     {% endfor %}
   </ul>
 
+  <h1>Short Posts, Thoughts, Reflections</h1>
+  <p>Short posts, thoughts, or other reflections I've had on building research software, industrial software development, in the context of my Ph.D. research.</p>
+  <ul class="posts">
+    {% for post in site.posts %}
+    {% if post.group == "short" %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endif %}
+    {% endfor %}
+  </ul>
+
   <h1>DoorDash Engineering</h1>
   <p>Articles I've written for the DoorDash Engineering blog.</p>
   <ul class="posts">
