--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Christopher Meiklejohn
   </ul>
 
   <h1>Short Posts, Thoughts, Reflections</h1>
-  <p>Short posts, thoughts, or other reflections I've had on building research software, industrial software development, in the context of my Ph.D. research.</p>
+  <p>Reflections I've had on building research software, industrial software development, in the context of my Ph.D. research.</p>
   <ul class="posts">
     {% for post in site.posts %}
     {% if post.group == "short" %}
