--- a/courses.html
+++ b/courses.html
@@ -6,6 +6,14 @@ title: Courses
 <div id="post">
   <h1>Courses</h1>
   <p> Here's information on courses I've been involved with:</p>
+  <h2>Co-Instructor</h2>
+  <p></p>
+  <ul>
+    <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2020)]</a>
+      <p></p>
+    </li>
+  </ul>
+
   <h2>Teaching Assistant</h2>
   <p></p>
 
