--- a/videos.html
+++ b/videos.html
@@ -11,6 +11,28 @@ title: Videos
   <ul>
     <li>
       <p>
+        <a href="https://www.youtube.com/watch?v=A3FWuvDEZJI">Method Overloading the Circuit</a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">ACM Symposium on Cloud Computing '22</span>
+      </p>
+    </li>
+    <li>
+      <p>
+        <a href="https://www.youtube.com/watch?v=pyYh-vNspAI">Service-level Fault Injection Testing</a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">ACM Symposium on Cloud Computing '21</span>
+      </p>
+    </li>
+    <li>
+      <p>
+        <a href="https://www.youtube.com/watch?v=BpWdPu4sf08">PARTISAN: Scaling the Distributed Actor Runtime
+        </a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">USENIX ATC '19</span>
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="https://www.youtube.com/watch?v=vk0-48qacqw">Distributed Deterministic Dataflow Programming</a>
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">ACM SIGPLAN Erlang Workshop 2014; Gothenburg, Sweden</span>
@@ -21,6 +43,13 @@ title: Videos
   <h2>Industry Conferences</h2>
   <p></p>
   <ul>
+    <li>
+      <p>
+        <a href="https://www.youtube.com/watch?v=F32peAwCPlM&t=11s">Resilient Microservices without the Chaos</a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">Strange Loop 2022, St. Louis; MO</span>
+      </p>
+    </li>
     <li>
       <p>
         <a
