--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,12 @@ title: Courses
   <p></p>
   <ul>
     <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2020)]</a>
-      <p></p>
+      <p>Authored 1.5hr lectures with <i>active learning</i> on:</p>
+      <ul>
+        <li>microservices.</li>
+        <li>microservice testing.</li>
+        <li>devops.</li>
+      </ul>
     </li>
   </ul>
 
