--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@ title: Courses
   <p></p>
   <ul>
     <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2020)]</a>
-      <p>Authored 1.5hr lectures with <i>active learning</i> on:</p>
+      <p>Ran all recitations and authored 1.5hr lectures with <i>active learning</i> on:</p>
       <ul>
         <li>microservices.</li>
         <li>microservice testing.</li>
@@ -24,7 +24,12 @@ title: Courses
 
   <ul>
     <li><a href="http://cmu-313.github.io">Foundations of Software Engineering [CMU-313 (Fall 2019)]</a>
-    <p></p>
+      <p>Handled all assignments, redesigned all recitations, taught recitations, and lectured on: </p>
+      <ul>
+        <li>microservices.</li>
+        <li>chaos engineering.</li>
+        <li>devops.</li>
+      </ul>
     </li>
     <li><a href="http://www.uclouvain.be/en-cours-2013-LSINF2345.html">Languages and algorithms for distributed applications [LSINF2345 (Spring 2017)]</a>
     <p>Main themes:</p>
