--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Christopher Meiklejohn
   </ul>
 
   <h1>Service-level Fault Injection Testing</h1>
-  <p>Articles I've written about Service-level Fault Injection Testing and Filibuster.</p>
+  <p>Articles I've written about Service-level Fault Injection Testing and <b>Filibuster.</b></p>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.group == "filibuster" %}
