--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,19 @@ title: Publications
 ---
 
 <div id="post">
+  <h1>Dissertation</h1>
+
+  <p></p>
+  <ul>
+    <li>
+      <p>
+        Resilient Microservice Applications, By Design, and without the Chaos
+        <span class="author"><b>Christopher S. Meiklejohn</b></span>
+        <span><a href="http://christophermeiklejohn.com/publications/cmeiklej_phd_s3d_2024.pdf">[PDF]</a></span>
+      </p>
+    </li>
+
+  
   <h1>Publications</h1>
 
   <!--
